--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ envlist = py36, py37, py38, py39
 deps =
     pytest
     marisa_trie
-    ./vendor/language_data
+    language_data
 commands = pytest
