update pyproject.toml and tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
-envlist = py36, py37, py38, py39
+envlist = py36, py37, py38, py39, py310
+skipsdist = True
 
 [testenv]
 deps =
     pytest
     marisa_trie
     language_data
-commands = pytest
+    poetry
+commands = poetry install -E data
+           pytest
