--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Elia Robyn Speer <rspeer@arborelia.net>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/rspeer/langcodes"
+exclude = ["langcodes/data/cldr*"]
 
 [tool.poetry.dependencies]
 python = ">= 3.6"
-language-data = { optional = true, path = "../language_data/", develop = true }
+language-data = { version = "^1.1", optional = true }
 
 [tool.poetry.dev-dependencies]
-language-data = { optional = true, path = "../language_data/", develop = true }
+language-data = { version = "^1.1", optional = true }
 
 [tool.poetry.extras]
 data = ["language-data"]
