--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
   report:
     runs-on: ubuntu-latest
     needs: test
+    permissions: 
+      pull-requests: write
     steps:
       - uses: actions/download-artifact@v4
       - name: Publish Test Reports
